commit before dinner

--- a/startbootstrap-stylish-portfolio-gh-pages/bottom.html
+++ b/startbootstrap-stylish-portfolio-gh-pages/bottom.html
@@ -80,13 +80,13 @@ border-right: 1px solid #dee2e6;
     <div style="padding: 20px;"></div>
     <div class="container">
         <div class="row">
-            <div class="col-12" id="imageContainer">
+            <div class="col-12 text-center" id="imageContainer">
                 <img  alt="W3Schools" id="main-img"  touchstart="getPos(event)" touchend="stopTracking()" onmousemove="getPos(event)" onmouseout="stopTracking()" src="img/ee-map.PNG" >
             </div>
             </div>
             <div class="row">
-              <div id="xCo">0</div>
-              <div id="yCo">0</div>
+              <div id="xCo" style="display:none;">0</div>
+              <div id="yCo" style="display:none;">0</div>
         </div>
         <div class="row">
             <div class="col-1">
