--- a/startbootstrap-stylish-portfolio-gh-pages/bottom.html
+++ b/startbootstrap-stylish-portfolio-gh-pages/bottom.html
@@ -77,7 +77,17 @@ border-right: 1px solid #dee2e6;
 </style>
 
 <body id="page-top" onload="hammer()">
-    <div style="padding: 20px;"></div>
+    <header class="masthead d-flex">
+      <div class="container text-center my-auto">
+        <h1 class="mb-1">Land Cover Change Detection</h1>
+        <h3 class="mb-5">
+          <em>Space App Challenge 2019 Tartu</em>
+        </h3>
+        <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Let's Start</a>
+      </div>
+      <div class="overlay"></div>
+    </header>
+    <section class="content-section bg-light" id="about">
     <div class="container">
         <div class="row">
             <div class="col-12 text-center" id="imageContainer">
@@ -142,9 +152,10 @@ border-right: 1px solid #dee2e6;
             </tbody>
         </table>
     </div>
+  </section>
 
   <!-- Scroll to Top Button-->
-  <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
+  <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top" style="z-index: 3;">
     <i class="fas fa-angle-up"></i>
   </a>
 
