--- a/startbootstrap-stylish-portfolio-gh-pages/bottom.html
+++ b/startbootstrap-stylish-portfolio-gh-pages/bottom.html
@@ -102,11 +102,11 @@ border-right: 1px solid #dee2e6;
         <div class="row">
             <div class="col-4 btn btn-light" onclick="toggle_map(this)">
                 <img src="img/forrest_icon.png" width="50px"/><br/>
-                <label >Forrest</label>        
+                <label >Forest</label>        
             </div>
             <div class="col-4 btn btn-light" onclick="toggle_map(this)">
                 <img src="img/river_icon.png" width="50px" height="50px"/><br/>
-                <label >River</label>        
+                <label >Water</label>        
             </div>
             <div class="col-4 btn btn-light" onclick="toggle_map(this)">
                 <img src="img/city_icon.png" width="50px"/><br/>
