--- a/startbootstrap-stylish-portfolio-gh-pages/bottom.html
+++ b/startbootstrap-stylish-portfolio-gh-pages/bottom.html
@@ -102,17 +102,17 @@ border-right: 1px solid #dee2e6;
         <div class="row">
             <div class="col-4 btn btn-light" onclick="toggle_map(this)">
                 <img src="img/forrest_icon.png" width="50px"/><br/>
-                <label >Forest</label>        
+                <label >Forest</label>
             </div>
             <div class="col-4 btn btn-light" onclick="toggle_map(this)">
                 <img src="img/river_icon.png" width="50px" height="50px"/><br/>
-                <label >Water</label>        
+                <label >Water</label>
             </div>
             <div class="col-4 btn btn-light" onclick="toggle_map(this)">
                 <img src="img/city_icon.png" width="50px"/><br/>
-                <label >City</label>        
+                <label >City</label>
             </div>
-                
+
         </div>
     </div>
 
@@ -130,23 +130,25 @@ border-right: 1px solid #dee2e6;
         <table class="table table-hover">
             <tbody>
                 <tr data-toggle="collapse" data-target="#accordion1" class="clickable">
-                    <td>Economic</td>
+                    <td>  <img class="icon" src="img/income.PNG" >Economic</td>
                 </tr>
                 <tr>
                     <td style="padding: 0;">
-                        <div id="accordion1" class="collapse custom_card" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+                        <div id="accordion1" class="collapse custom_card" >
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
                     </td>
                 </tr>
                 <tr data-toggle="collapse" data-target="#accordion2" class="clickable">
-                    <td>Environment</td>
+                    <td> <img class="icon" src="img/greenEarth.PNG" >Environment</td>
                 </tr>
                 <tr>
                     <td style="padding: 0;">
+
                         <div id="accordion2" class="collapse custom_card" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
                     </td>
                 </tr>
                 <tr data-toggle="collapse" data-target="#accordion3" class="clickable">
-                    <td>Social</td>
+                    <td><img class="icon" src="img/meeting.PNG" >Social</td>
                 </tr>
                 <tr>
                     <td style="padding: 0;">
