--- a/startbootstrap-stylish-portfolio-gh-pages/bottom.html
+++ b/startbootstrap-stylish-portfolio-gh-pages/bottom.html
@@ -135,7 +135,24 @@ border-right: 1px solid #dee2e6;
                 <tr>
                     <td style="padding: 0;">
                         <div id="accordion1" class="collapse custom_card" >
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+                          <p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:107%;font-size:15px;font-family:"Calibri",sans-serif;'><strong><span style="font-size: 36px; line-height: 107%; font-family: Arial, sans-serif; color: black;">P</span><span style="font-size: 18px; line-height: 107%; font-family: Arial, sans-serif; color: black;">opulation</span></strong><span style='font-size:13px;line-height:107%;font-family:"Arial",sans-serif;color:black;'>&nbsp;statistics are based on the population figure which has been determined in population censuses and revised in the&nbsp;intercensal&nbsp;period according to registered population changes.</span></p>
+  <p
+      style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:107%;font-size:15px;font-family:"Calibri",sans-serif;'><strong><span style="font-size: 30px; line-height: 107%; font-family: Arial, sans-serif; color: black;">T</span><span style="font-size: 18px; line-height: 107%; font-family: Arial, sans-serif; color: black;">he Business Register</span></strong><span style='font-size:13px;line-height:107%;font-family:"Arial",sans-serif;color:black;'>&nbsp;for Statistical Purposes is based on the Commercial Register, the Non-Profit Institutions and Foundations Register, Register of Taxable Persons and the State Register of State and Local Government Agencies.</span></p>
+      <p
+          style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:107%;font-size:15px;font-family:"Calibri",sans-serif;'><strong><span style="font-size: 30px; line-height: 107%; font-family: Arial, sans-serif; color: black;">L</span><span style="font-size: 18px; line-height: 107%; font-family: Arial, sans-serif; color: black;">and under inland waters</span></strong>
+          <span
+              style='font-size:13px;line-height:107%;font-family:"Arial",sans-serif;color:black;'>&nbsp;is an area of land under a natural or artificial water body or a part of it.</span>
+              </p>
+              <p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:107%;font-size:15px;font-family:"Calibri",sans-serif;'><strong><span style="font-size: 30px; line-height: 107%; font-family: Arial, sans-serif; color: black;">R</span><span style="font-size: 18px; line-height: 107%; font-family: Arial, sans-serif; color: black;">esidential land</span></strong>
+                  <span
+                      style='font-size:13px;line-height:107%;font-family:"Arial",sans-serif;color:black;'>&nbsp;is an area of land for buildings intended for permanent or seasonal habitation and the land for garages.</span>
+              </p>
+              <p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:107%;font-size:15px;font-family:"Calibri",sans-serif;'><strong><span style="font-size: 30px; line-height: 107%; font-family: Arial, sans-serif; color: black;">N</span><span style="font-size: 18px; line-height: 107%; font-family: Arial, sans-serif; color: black;">ational defence land</span></strong>
+                  <span
+                      style="font-size: 18px; line-height: 107%; font-family: Arial, sans-serif; color: black;">&nbsp;</span><span style='font-size:13px;line-height:107%;font-family:"Arial",sans-serif;color:black;'>is an area of land used for the purposes of national defence, border guard and rescue services.</span></p>
+              <p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:107%;font-size:15px;font-family:"Calibri",sans-serif;'><span style="font-size: 8px; line-height: 107%; font-family: Arial, sans-serif; color: black;">Source: Statistics Estonia (</span><span style="font-size: 8px;"><a href="https://www.stat.ee/en">https://www.stat.ee/en</a>)</span></p>
+              <p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;line-height:107%;font-size:15px;font-family:"Calibri",sans-serif;'><span style='font-size:13px;line-height:107%;font-family:"Arial",sans-serif;color:black;'>&nbsp;</span></p>
+                        </div>
                     </td>
                 </tr>
                 <tr data-toggle="collapse" data-target="#accordion2" class="clickable">
