--- a/startbootstrap-stylish-portfolio-gh-pages/bottom.html
+++ b/startbootstrap-stylish-portfolio-gh-pages/bottom.html
@@ -130,7 +130,7 @@ border-right: 1px solid #dee2e6;
         <table class="table table-hover">
             <tbody>
                 <tr data-toggle="collapse" data-target="#accordion1" class="clickable">
-                    <td>  <img class="icon" src="img/income.PNG" >Economic</td>
+                    <td>  <img class="icon" src="img/income.png" >Economic</td>
                 </tr>
                 <tr>
                     <td style="padding: 0;">
@@ -156,7 +156,7 @@ border-right: 1px solid #dee2e6;
                     </td>
                 </tr>
                 <tr data-toggle="collapse" data-target="#accordion2" class="clickable">
-                    <td> <img class="icon" src="img/greenEarth.PNG" >Environment</td>
+                    <td> <img class="icon" src="img/greenEarth.png" >Environment</td>
                 </tr>
                 <tr>
                     <td style="padding: 0;">
@@ -165,7 +165,7 @@ border-right: 1px solid #dee2e6;
                     </td>
                 </tr>
                 <tr data-toggle="collapse" data-target="#accordion3" class="clickable">
-                    <td><img class="icon" src="img/meeting.PNG" >Social</td>
+                    <td><img class="icon" src="img/meeting.png" >Social</td>
                 </tr>
                 <tr>
                     <td style="padding: 0;">
